# fiducials_rviz

./: BasicShapes.cpp  CMakeLists.txt  README.md  package.xml  test.c
include/: fiducials_rviz.h
launch/: camera_calibrate.sh  pgr_camera_viewer.launch  pgr_fiducials.launch  test.launch
src/: fiducials_rviz.cpp
